# rotation-trick-jax

./: .gitignore  LICENSE  README.md  pyproject.toml  rotation_trick_test.py
src/rotation_trick_jax/: rotation_trick.py
